# openGl3dObject

./: .gitignore  CMakeLists.txt  README.md  fragment_shader.frag  main.cpp  vertex_shader.vert
